--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,14 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dynamic = ["dependencies"]
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 
 [project.urls]
 "Homepage" = "https://github.com/ivan-koryshkin"
 "Bug Tracker" = "https://github.com/ivan-koryshkin"
 
 [build-system]
-requires = [
-  "setuptools>=61.0",
-  "pyyaml"
-]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
